--- a/_posts/0000-01-02-john89521.md
+++ b/_posts/0000-01-02-john89521.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to John's amazing  slide!"
 ---
 This is github john slide
 Use the left arrow to go back!
